further styling edits made

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,4 +144,12 @@
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
   }
+  /* .icons {
+    background-color: white;
+    opacity: 0.3;
+  }
+  .icon-text {
+    color: black;
+    font-weight: bold;
+  } */
   
