--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,3 +145,20 @@
     transform: translateX(-50%) translateY(-50%);
   }
   
+  card {
+    background-color: #fff;
+    min-width: 100%;
+    min-height: 200px;
+  }
+
+  .card--content {
+    background-color: #e74c3c;
+    min-width: 200px;
+    margin: 5px;
+  }
+
+
+
+  .card {
+    overflow-x: auto;
+  }
