--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,8 @@
   
   .call-to-action {
     position: relative;
-    background-color: #343a40;
+    /* background-color: #343a40; */
+    background-color: red;
     background-size: cover;
     padding-top: 7rem;
     padding-bottom: 7rem;
@@ -121,7 +122,6 @@
   }
 
   .bg-light {
-    background-color: #f8f9fa!important;
     z-index: 1;
 }
 
@@ -140,16 +140,22 @@
     transform: translateX(-50%) translateY(-50%);
   }
 
-
+.icon-display {
+  margin-bottom: -6%;
+  margin-top: 24%;
+  padding-top: 3%;
+}
 #upcoming-events {
   display: flex;
   background-color: #fff;
   min-width: 30vw;
   min-height: 30vh;
   overflow-x: auto;
-  align-items: center;
+  /* align-items: center; */
+  align-content: space-between;
   height: 100vh;
   width: 100vw;
+  justify-content: space-evenly;
 }
 #upcoming-events:: -webkit-scrollbar {
   display: none;
@@ -162,13 +168,38 @@
   margin-right: 15px;
   display: inline-block;
 }
+/* .card--content img {
+  height: 31vh;
+    width: 26vw;
+    margin-top: 7%;
+}  */
+
+/* .front {
+  width: 25vw;
+    height: 30vh;
+    text-align: center;
+}
+.back {
+  width: 25vw;
+    height: 30vh;
+    text-align: center;
+} */
+
 .card--content img {
   height: 20vh;
+  width: 30vw;
   width: 20vw;
 }
 .card-body {
-  width: 20vw;
-  height: 30vh;
+  width: 24vw;
+    height: 30vh;
+    text-align: center;
+}
+
+.front {
+  height: 51vh;
+  margin-right: 25px;
+  text-align: center;
 }
 
   
