--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,49 +4,13 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
  */
 
-<<<<<<< HEAD
-body {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+ .bg{
+  background:url(../images/cbg5.jpg) no-repeat;
+  width:100%;
+  height:200vh;
+  background-color: red;
+background-size: 300%;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700;
-}
-
-header.masthead {
-  position: relative;
-  /* background-color: #343a40; */
-  /* background: url("../img/bg-masthead.jpg") no-repeat center center; */
-  background-size: cover;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
-
-header.masthead .overlay {
-  position: absolute;
-  /* background-color: #212529; */
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  opacity: 1;
-}
-
-header.masthead h1 {
-  font-size: 2rem;
-}
-
-@media (min-width: 768px) {
-  header.masthead {
-    padding-top: 12rem;
-    padding-bottom: 12rem;
-=======
 
   header.masthead {
     position: relative;
@@ -63,7 +27,6 @@ header.masthead h1 {
     top: 0;
     left: 0;
     opacity: 0.8;
->>>>>>> 6abc771a6436074612119d80f61d1860d774d534
   }
   header.masthead h1 {
     font-size: 3rem;
@@ -81,9 +44,6 @@ header.masthead h1 {
 
 @media (min-width: 768px) {
   .showcase .showcase-text {
-<<<<<<< HEAD
-    padding: 7rem;
-=======
     padding: 3rem;
   }
   
@@ -164,99 +124,9 @@ header.masthead h1 {
   footer.footer {
     padding-top: 4rem;
     padding-bottom: 4rem;
->>>>>>> 6abc771a6436074612119d80f61d1860d774d534
   }
 }
 
-<<<<<<< HEAD
-.features-icons {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.features-icons .features-icons-item {
-  max-width: 20rem;
-}
-
-.features-icons .features-icons-item .features-icons-icon {
-  height: 7rem;
-}
-
-.features-icons .features-icons-item .features-icons-icon i {
-  font-size: 4.5rem;
-}
-
-.features-icons .features-icons-item:hover .features-icons-icon i {
-  font-size: 5rem;
-}
-
-.testimonials {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.testimonials .testimonial-item {
-  max-width: 18rem;
-}
-
-.testimonials .testimonial-item img {
-  max-width: 12rem;
-  box-shadow: 0px 5px 5px 0px #adb5bd;
-}
-
-.call-to-action {
-  position: relative;
-  background-color: #343a40;
-  background: url("../img/bg-masthead.jpg") no-repeat center center;
-  background-size: cover;
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.call-to-action .overlay {
-  position: absolute;
-  background-color: #212529;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0.3;
-}
-
-footer.footer {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.bg-light {
-  background-color: #f8f9fa !important;
-  z-index: 1;
-}
-
-header video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: 0;
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-}
-
-.card {
-  background-color: rgb(185, 60, 154);
-  min-width: 100%;
-  min-height: 200px;
-}
-
-.card--content {
-  background-color: #e74c3c;
-=======
   .bg-light {
     background-color: #f8f9fa!important;
     z-index: 1;
@@ -287,21 +157,8 @@ header video {
 }
 .card--content {
   background-color: blue;
->>>>>>> 6abc771a6436074612119d80f61d1860d774d534
   min-width: 200px;
   margin: 5px;
 }
 
-<<<<<<< HEAD
-.card {
-  overflow-x: auto;
-}
-
-.card-2 {
-  background-color: rgb(185, 60, 154);
-  min-width: 10%;
-  min-height: 10px;
-}
-=======
   
->>>>>>> 6abc771a6436074612119d80f61d1860d774d534
