--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -16,8 +16,9 @@
   .card {
     /*float: left;*/
     max-width: 33.333%;
-    padding: .75rem;
+    /* padding: .75rem; */
     margin-bottom: 2rem;
+    margin-right: 1rem;
     border: 0;
     flex-basis: 33.333%;
     flex-grow: 0;
