--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1,35 +1,89 @@
 #search {
-    padding: 5px !important;
-    font-size: 70%;
-    width: 100%;
-    border: #f4f4f4 3px solid;
+  padding: 5px !important;
+  font-size: 70%;
+  width: 100%;
+  border: #f4f4f4 3px solid;
 }
 
-#card-row{
-    align-items: stretch;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    overflow-y: hidden;
-  }
-  .card {
-    /*float: left;*/
-    max-width: 33.333%;
-    padding: .75rem;
-    margin-bottom: 2rem;
-    border: 0;
-    flex-basis: 33.333%;
-    flex-grow: 0;
-    flex-shrink: 0;
-  }
-  
-  /* .card > img {
+#card-row {
+  align-items: stretch;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+.card {
+  /*float: left;*/
+  max-width: 33.333%;
+  padding: 0.75rem;
+  margin-bottom: 2rem;
+  border: 0;
+  flex-basis: 33.333%;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+/* .card > img {
     margin-bottom: .75rem;
   } */
-  
-  .card-text {
-    font-size: 85%;
+
+.card-text {
+  font-size: 85%;
+}
+
+body {
+  background-color: rgb(85, 206, 145);
+}
+
+#Header a:hover {
+  color: rgb(226, 97, 198);
+}
+
+.bg {
+  background: url(./images/800px_COLOURBOX4762216.jpg) no-repeat;
+  width: 100%;
+  height: 100vh;
+  background-size: 200%;
+}
+
+.form-container {
+  position: absolute;
+  top: 15vh;
+  background: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px #000;
+}
+
+.bg1 {
+  background: url(./images/blosomflower.jpg) no-repeat;
+  width: 100%;
+  height: 100vh;
+  background-size: 200%;
+}
+
+.bg2 {
+  background: url(./images/snow.png) no-repeat;
+  width: 150%;
+  height: 100vh;
+  background-size: 200%;
+}
+
+@media only screen and(max-width:678px) {
+  .bg {
+    background-size: 300%;
   }
-  
- 
+}
+
+@media only screen and(max-width:678px) {
+  .bg1 {
+    background-size: 300%;
+  }
+}
+
+@media only screen and(max-width:678px) {
+  .bg2 {
+    background-size: 300%;
+  }
+}
